# it-works-on-my-machine

./: .gitignore  README.md  justfile  test-permissions.sh
.github/actions/auto-retry/: README.md  action.yml
.github/actions/retry-reporter/: action.yml
.github/workflows/: auto-flaky-pr.yml  ci.yml  flaky-demo.yml  retry.yml  test-flaky.yml  test.yml
go/: go.mod
go/pkg/probability/: probability.go
go/tests/: probability_test.go
python/: pyproject.toml  pytest.ini
python/src/it_works_on_my_machine/: __init__.py  probability.py
python/tests/: test_probability.py
scripts/: README.md  check-and-retry-failed-jobs.sh
typescript/: jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts  probability.ts
typescript/tests/: probability.test.ts
